New routing library and login stuff

--- a/static/index.html
+++ b/static/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Go server</title>
-    <style>
-        h1 {
-            font-size: 3rem;
-            color: tomato;
-        }
-    </style>
-</head>
-<body>
-    <h1>Go lang web server hosting</h1>
-    <!-- <form method="POST" action="/form">     
-        <label>Name</label><input name="name" type="text" value="" />
-        <label>Address</label><input name="address" type="text" value="" />
-        <input type="submit" value="submit" />
-    </form> -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/webautn">
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/assets/index.bbf416c3.js"></script>
+    <link rel="stylesheet" href="/assets/index.cd9c0392.css">
+  </head>
+  <body>
+    <div id="root"></div>
+    
+  </body>
 </html>
